Add routes and separate pages for each meal. Add images.

--- a/views/dessert.html
+++ b/views/dessert.html
@@ -1,15 +1,15 @@
 <div class="header">
     <ul class="nav nav-pills pull-right">
         <li><a ng-href="#">Home</a></li>
-        <li class="active"><a ng-href="#breakfast">Breakfast</a></li>
+        <li><a ng-href="#breakfast">Breakfast</a></li>
         <li><a ng-href="#lunch">Lunch</a></li>
         <li><a ng-href="#dinner">Dinner</a></li>
-        <li><a ng-href="#dessert">Dessert</a></li>
+        <li class="active"><a ng-href="#dessert">Dessert</a></li>
     </ul>
     <h3 class="text-muted">Bistro HHW</h3>
 </div>
 
 <div class="jumbotron">
-    <h1>Breakfast</h1>
-    <img width="100%" src="../images/frenchtoast.jpg"/>
+    <h1>Dessert</h1>
+    <img width="100%" src="../images/pie.jpg"/>
 </div>
