--- a/views/lunch.html
+++ b/views/lunch.html
@@ -1,8 +1,8 @@
 <div class="header">
     <ul class="nav nav-pills pull-right">
         <li><a ng-href="#">Home</a></li>
-        <li class="active"><a ng-href="#breakfast">Breakfast</a></li>
-        <li><a ng-href="#lunch">Lunch</a></li>
+        <li><a ng-href="#breakfast">Breakfast</a></li>
+        <li class="active"><a ng-href="#lunch">Lunch</a></li>
         <li><a ng-href="#dinner">Dinner</a></li>
         <li><a ng-href="#dessert">Dessert</a></li>
     </ul>
@@ -10,6 +10,6 @@
 </div>
 
 <div class="jumbotron">
-    <h1>Breakfast</h1>
-    <img width="100%" src="../images/frenchtoast.jpg"/>
+    <h1>Lunch</h1>
+    <img width="100%" src="../images/lunch.jpg"/>
 </div>
