--- a/views/main.html
+++ b/views/main.html
@@ -1,10 +1,10 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">Breakfast</a></li>
-    <li><a ng-href="#">Lunch</a></li>
-    <li><a ng-href="#">Dinner</a></li>
-    <li><a ng-href="#">Desserts</a></li>
+      <li><a ng-href="#breakfast">Breakfast</a></li>
+      <li><a ng-href="#lunch">Lunch</a></li>
+      <li><a ng-href="#dinner">Dinner</a></li>
+      <li><a ng-href="#dessert">Dessert</a></li>
   </ul>
   <h3 class="text-muted">Bistro HHW</h3>
 </div>
