Add routes and separate pages for each meal. Add images.

--- a/views/breakfast.html
+++ b/views/breakfast.html
@@ -13,3 +13,6 @@
     <h1>Breakfast</h1>
     <img width="100%" src="../images/frenchtoast.jpg"/>
 </div>
+<div class="footer">
+    <p>♥ Say nice things about the chef!</p>
+</div>
