--- a/views/dinner.html
+++ b/views/dinner.html
@@ -13,3 +13,7 @@
     <h1>Dinner</h1>
     <img width="100%" src="../images/pasta-a.jpg"/>
 </div>
+
+<div class="footer">
+    <p>♥ Say nice things about the chef!</p>
+</div>
