--- a/views/dessert.html
+++ b/views/dessert.html
@@ -13,3 +13,7 @@
     <h1>Dessert</h1>
     <img width="100%" src="../images/pie.jpg"/>
 </div>
+
+<div class="footer">
+    <p>♥ Say nice things about the chef!</p>
+</div>
