--- a/views/lunch.html
+++ b/views/lunch.html
@@ -13,3 +13,6 @@
     <h1>Lunch</h1>
     <img width="100%" src="../images/lunch.jpg"/>
 </div>
+<div class="footer">
+    <p>♥ Say nice things about the chef!</p>
+</div>
