--- a/views/main.html
+++ b/views/main.html
@@ -10,29 +10,13 @@
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Doing the scaffolding.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+    <h3>
+        <img width="100%" src="../images/beouf.jpg"/>
+        <br/>
+        Where the food is awesome.
+    </h3>
 </div>
 
 <div class="footer">
-  <p>♥ from the Yeoman team</p>
+    <p>♥ Say nice things about the chef!</p>
 </div>
