Fix image paths.

--- a/views/breakfast.html
+++ b/views/breakfast.html
@@ -11,7 +11,7 @@
 
 <div class="jumbotron">
     <h1>Breakfast</h1>
-    <img width="100%" src="../images/frenchtoast.jpg"/>
+    <img width="100%" src="images/frenchtoast.jpg"/>
 </div>
 <div class="footer">
     <p>♥ Say nice things about the chef!</p>
