--- a/views/dessert.html
+++ b/views/dessert.html
@@ -11,7 +11,7 @@
 
 <div class="jumbotron">
     <h1>Dessert</h1>
-    <img width="100%" src="../images/pie.jpg"/>
+    <img width="100%" src="images/pie.jpg"/>
 </div>
 
 <div class="footer">
