--- a/views/main.html
+++ b/views/main.html
@@ -11,7 +11,7 @@
 
 <div class="jumbotron">
     <h3>
-        <img width="100%" src="../images/beouf.jpg"/>
+        <img width="100%" src="images/beouf.jpg"/>
         <br/>
         Where the food is awesome.
     </h3>
