--- a/views/dinner.html
+++ b/views/dinner.html
@@ -11,7 +11,7 @@
 
 <div class="jumbotron">
     <h1>Dinner</h1>
-    <img width="100%" src="../images/pasta-a.jpg"/>
+    <img width="100%" src="images/pasta-a.jpg"/>
 </div>
 
 <div class="footer">
