--- a/views/lunch.html
+++ b/views/lunch.html
@@ -11,7 +11,7 @@
 
 <div class="jumbotron">
     <h1>Lunch</h1>
-    <img width="100%" src="../images/lunch.jpg"/>
+    <img width="100%" src="images/lunch.jpg"/>
 </div>
 <div class="footer">
     <p>♥ Say nice things about the chef!</p>
